--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.35.0
-scikit-learn==1.3.2
-pandas==2.1.4
-numpy==1.24.3
-plotly==5.22.0
+streamlit
+pandas
+numpy
+scikit-learn
+plotly
