--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-pandas
-numpy
-scikit-learn
-plotly
+streamlit==1.35.0
+scikit-learn==1.3.0
+pandas==2.0.3
+numpy==1.24.3
+plotly==5.22.0
